--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -12,16 +12,17 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  google_fonts: ^6.3.2
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
+  google_fonts: ^6.3.2  
+  firebase_core: ^4.2.0
+  cloud_firestore: ^6.0.3
+  firebase_auth: ^6.1.1
+  firebase_storage: ^13.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  build_runner: ^2.4.6
-  hive_generator: ^2.0.1
+  
   flutter_lints: ^3.0.1
 
 flutter:
